  - Color coded matching of braces, brackets and paratheses.
  - Highlighting of selected word.
  - Toolbar at the bottom.
  - Better input completion.
- Scenes now allow to select an existing Script Resource instead of having to create
  a new one.
- Script files reload without a user prompt if changed externally and not changed in 
  the Editor.
- Layout / QML errors are reported in the editor.

Fixed Bugs:
- Fixed a few UI typos.
- Fixed a crash that occured if a project was loaded that contained a resource of
  an unknown type.

=================
Version 1.3.1.0
=================

Fixed Bugs:
- Fixed an error introduced in 1.3.0 with parsing notification.show() arguments resulting
  in not starting onButton scripts in certain calls.
- Fixed a crash that occured when opening a project with an eos Script in first place
  of the Script list.
- Fixed EOS Scripts leaving the editor blank after starting a debug session.
- Fixed EOS notifications not working correctly.
- Fixed EOS Scripts not terminating after the last scene ended if there was an open
  notification running.
- Fixed some code generation overlays messing up the initial enabled state of certain 
  elements.
- Fixed global constants missing from sanboxed Lua scripts.
- Fixed race condition that prevented sceneManager.gotoScene() to transition to scenes
  when called at the end of scripts.
- Fixed Lua code generation for global enum values (IconAlignment, TextAlignment).

=================
Version 1.3.0.0
=================

New Features:
- Added support for Lua scripts. Scene and notification scripts can load and
  run Lua scripts instead of JS. the script types can be mixed in a Project
  at will.
- Resources can be tagged. Those tags can be used in scripts for custom logic.
- Metronome volume and default SFX can be configured.
- Added the ability to export Projects as an archive from the editor.
- Added an editor tool to compress all images in a project, reducing the project's size.